--- a/scrowl/style.css
+++ b/scrowl/style.css
@@ -2,6 +2,9 @@ html, body {
   overflow: hidden;
   margin: 0;
   padding: 0;
+  height: 100%;
+  width: 100%;
+  position: fixed;
 }
 canvas {
   display: block;
